# anomaly-cascade-papers

./: .gitignore  README.md  icon.svg.import  project.godot
addons/cute_cards/: card_front_outline.png.import
addons/optional/: Option.gd  Result.gd
assets/themes/: main_theme.tres
globals/: algorithms.gd  enums.gd  log.gd  logs.gd  multiplayer_manager.gd  signal_bus.gd  types.gd
godot/: .gitignore  README.md  acp.gdextension  project.godot  wsf-rust.gdextension
godot/globals/: enums.gd  types.gd
godot/scenes/: main.gd  main.tscn
resources/board/: battle.gd
resources/card/: card.gd  card.tres  catalyst.gd  factory.gd  follower.gd  follower_stats.gd
resources/card_components/: flux.gd  follower_stats.gd
resources/followers/: scientist.tres
rust/: .gitignore  Cargo.toml
rust/crates/anomaly-cascade/: Cargo.toml
rust/crates/anomaly-cascade-cli/: Cargo.toml
rust/crates/anomaly-cascade-cli/src/: main.rs
rust/crates/anomaly-cascade-gdextension/: Cargo.toml
rust/crates/anomaly-cascade-gdextension/src/: lib.rs
rust/crates/anomaly-cascade-gdsextension/: Cargo.toml
rust/crates/anomaly-cascade/src/: card.rs  collection.rs  effect.rs  faction.rs  follower.rs  game.rs  lib.rs  permanent.rs  round_manager.rs  speed.rs
rust/crates/anomaly-cascade/src/card/: flux.rs
rust/crates/anomaly-cascade/src/follower/: stats.rs
rust/src/: lib.rs
scenes/: main.gd  main.tscn
scenes/battle/: battle.gd  battle.tscn
scenes/board/: board.tscn  board_view.tscn  card_container.gd
scenes/board_view/: board_view.tscn
squib/: card.yml  cards.csv  main.rb
(+136 files in other folders)
