[package]
name = "anomaly-cascade-gdextension"
version = "0.0.0"
edition = "2021"

[lib]
crate-type = ["cdylib"] # Compile this crate to a dynamic C library.

[dependencies]
godot = { version = "0.2", features = ["api-4-3"] }

# TODO: Add release/export tag that when used, will export library inside of res:// folder
